--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.474.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "vuesax-icons": "^1.0.0"
   },
   "devDependencies": {
